# Topic

./: Blit.py  Pipfile  curvefit_test.py  customer_info.xlsx  dataset.xlsm  dataset_2agent.xlsm  finder_1agent.py  finder_2agent.py  finder_2agent_acc.py  mlp_curvefit.py  output.xlsx  price.csv  pyproject.toml  pyqt.py  requirements.txt  result.pickle  rho_simulate.py  rho_simulate_weird.py  sfztest_1agent.py  sfztest_1agent_acc.py  sfztest_2agent.py  sfztest_2agent_acc.py  sfztest_dynamic copy.py  sfztest_dynamic.py  smalltest.py  test.py  tester_1ag_retention.py  tester_1ag_weird.py  tester_1agent.py  tester_1agent_acc.py  tester_1agent_acc_limit.py  tester_2ag_weird.py  tester_2agent.py  tester_2agent_acc.py  v2.py  v3.py
data/: double_company.xlsx  single_company.xlsx
oldfile/: KeyPress.py  finder_1agent_acc.py  finder_2agent.py  sfztest_2agent.py  tester_1ag_retention.py  tester_1agent.py  tester_1agent_acc_full.py  tester_2agent.py  tester_2agent_acc.py
p2/: DataCreator.py  hist.pickle  history_Rate.xlsx  model.py  test.py
p3/: DataCenter.py  colosseum.py  hist.xlsx  report.txt  search.xlsx
v3sfzdy/: histdata.xlsx  histdata0.pickle  histdata0_0_1.pickle  histdata0_0_10.pickle  histdata0_0_2.pickle  histdata1.pickle  kmean_N0~10H5000K500.pickle  kmean_N0~1H5000K10.pickle  kmean_N0~1H5000K20.pickle  kmean_N0~1H5000K200.pickle  kmean_N0~1H5000K500.pickle  kmean_N0~1H5000K9.pickle  kmean_N0~2H5000K200.pickle  kmean_N0~2H5000K500.pickle  kmean_N10H5000K200.pickle  kmean_N10H5000K500.pickle  kmean_N1H5000K200.pickle  kmean_N1~2H5000K20.pickle  (+30 more)
