[tool.poetry]
name = "topic"
version = "0.1.0"
description = ""
authors = ["aaron"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
autopep8 = "1.6.0"
pyqtgraph = "0.12.4"
sklearn = "0.0"
tensorflow = "^2.9.1"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
PyQt6 = "^6.3.0"
openpyxl = "^3.0.10"
hdbscan = "^0.8.28"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
