[tool.poetry]
name = "topic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
autopep8 = "^1.6.0"
setuptools = "<60.0"
numpy = "^1.22"
scipy = "^1.8.1"
sklearn = "^0.0"
pandas = "^1.4.3"
openpyxl = "^3.0.10"
PyQt6 = "^6.3.1"
pyqtgraph = "^0.12.4"
matplotlib = "^3.5.2"
multiprocess = "^0.70.13"
tqdm = "^4.64.0"
numba = "^0.55.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
